# liburing

./: Cargo.toml  README.md
lib/: liburing.pc.in  liburing.spec
lib/src/: Makefile  queue.c  register.c  setup.c
lib/src/include/: liburing.h
lib/test/: io_uring_enter.c
src/: lib.rs
tests/: test_read_file.rs
