[package]
name = "liburing"
authors = ["Ivan Prisyazhnyy <john.koepi@gmail.com>"]
description = "Rust liburing#24bd087 raw bindings with basic tests"
documentation = "http://kernel.dk/io_uring.pdf"
edition = "2018"
license = "MIT/Apache-2.0"
publish = true
repository = "https://github.com/sitano/liburing"
version = "0.0.2"

[build-dependencies]
bindgen = "0.51.1"

[dependencies]
libc = "0.2.62"
